Actualiza el favicon y el título en index.html; ajusta el script de desarrollo en package.json; mejora el componente Hero con nuevos estilos; modifica la barra de navegación para un mejor diseño móvil; agrega enlaces a las páginas de servicios en el componente Services.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/DevCoder-sfondo-grande.png" />
+    <link rel="icon" type="image/svg+xml" href="/DevCoder-sfondo-grande.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>DevCoder: Desarrollo de Software a la medida </title>
   </head>
   <body>
     <div id="root"></div>
